-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 8, 11, 17, 21, 25
-
Component/s: client-libs
-
b02
-
other
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8361289 | 25.0.1 | Renjith Kannath Pariyangad | P3 | Resolved | Fixed | b02 |
| JDK-8359400 | 21.0.9-oracle | Renjith Kannath Pariyangad | P3 | Resolved | Fixed | b01 |
| JDK-8364713 | 21.0.9 | Goetz Lindenmaier | P3 | Resolved | Fixed | b02 |
| JDK-8359401 | 17.0.17-oracle | Renjith Kannath Pariyangad | P3 | Resolved | Fixed | b01 |
| JDK-8365462 | 17.0.17 | Goetz Lindenmaier | P3 | Resolved | Fixed | b04 |
| JDK-8359399 | 11.0.29-oracle | Renjith Kannath Pariyangad | P3 | Resolved | Fixed | b01 |
| JDK-8361227 | 8u471 | Renjith Kannath Pariyangad | P3 | Resolved | Fixed | b02 |
- backported by
-
JDK-8359399 JNI exception pending in Java_sun_awt_screencast_ScreencastHelper_remoteDesktopKeyImpl of screencast_pipewire.c:1214 (ID: 51119)
-
- Resolved
-
-
JDK-8359400 JNI exception pending in Java_sun_awt_screencast_ScreencastHelper_remoteDesktopKeyImpl of screencast_pipewire.c:1214 (ID: 51119)
-
- Resolved
-
-
JDK-8359401 JNI exception pending in Java_sun_awt_screencast_ScreencastHelper_remoteDesktopKeyImpl of screencast_pipewire.c:1214 (ID: 51119)
-
- Resolved
-
-
JDK-8361227 JNI exception pending in Java_sun_awt_screencast_ScreencastHelper_remoteDesktopKeyImpl of screencast_pipewire.c:1214 (ID: 51119)
-
- Resolved
-
-
JDK-8361289 JNI exception pending in Java_sun_awt_screencast_ScreencastHelper_remoteDesktopKeyImpl of screencast_pipewire.c:1214 (ID: 51119)
-
- Resolved
-
-
JDK-8364713 JNI exception pending in Java_sun_awt_screencast_ScreencastHelper_remoteDesktopKeyImpl of screencast_pipewire.c:1214 (ID: 51119)
-
- Resolved
-
-
JDK-8365462 JNI exception pending in Java_sun_awt_screencast_ScreencastHelper_remoteDesktopKeyImpl of screencast_pipewire.c:1214 (ID: 51119)
-
- Resolved
-
- caused by
-
JDK-8351907 [XWayland] [OL10] Robot.mousePress() is delivered to wrong place
-
- Closed
-
- relates to
-
JDK-8357584 [XWayland] [OL10] Robot.mousePress() is delivered to wrong place
-
- Resolved
-
- links to
-
Commit(master)
openjdk/jdk17u-dev/37a39c03
-
Commit(master)
openjdk/jdk21u-dev/aab1e218
-
Commit(master)
openjdk/jdk25u/94b6b99b
-
Commit(master)
openjdk/jdk/2103dc15
-
Review(jdk25)
openjdk/jdk/25731
-
Review(master)
openjdk/jdk17u-dev/3832
-
Review(master)
openjdk/jdk21u-dev/2043
-
Review(master)
openjdk/jdk25u/3
-
Review(master)
openjdk/jdk/25605